--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,4 +10,12 @@
       </li>
     </ul>
   </nav>
+  <button type="button" class="one-btn" data-modal-open-hero>One-button</button>
+
+  <button type="button" class="one-btn" data-modal-open-first>
+    One-button
+  </button>
+  <button type="button" class="one-btn" data-modal-open-second>
+    One-button
+  </button>
 </header>
